# interviews

./: .envrc  .gitignore  requirements.txt
1-lru-cache/python/: README.md
1-lru-cache/ruby/: Gemfile
1-lru-cache/typescript/: README.md
4-qa/: README.md  formTest.js  registrationForm.html
4-rec-model/python/: .gitignore  create_model.ipynb  create_model_solutions.ipynb
5-nayya-shopping-cart/: .gitignore  README.md
5-nayya-shopping-cart/config/: application.rb  cable.yml  credentials.yml.enc  master.key  routes.rb
5-nayya-shopping-cart/db/: schema.rb
5-nayya-shopping-cart/storage/: development.sqlite3
5-nayya-shopping-cart/tmp/: local_secret.txt
5-qa-skills-eval-shopping-cart/: Gemfile
5-qa-skills-eval-shopping-cart/db/: seeds.rb
6-qa-pair-programming/: README.md
6-qa-pair-programming/send-this-to-candidate/: README.md
6-qa-skill-eval/send-this-to-candidate/: formTest.js  package-lock.json  registrationForm.html
7-number-guessing/: README.md
7-number-guessing/backend/: index.js  package-lock.json  (+1 more)
8-data-transformer/: .env  README.md  create_db.py  pyproject.toml  setup.py
8-data-transformer/.dagster/: dagster.yaml
8-data-transformer/.dagster/storage/: index.db  runs.db  schedules.db
8-data-transformer/code/: transformer.py
8-data-transformer/config/: field_mappings.yaml
8-data-transformer/dagster_transformer/: assets.py  definitions.py
8-data-transformer/data/: DECodePairingInterview2025_Cleaned.csv  DECodePairingInterview2025_CleanedAdvanced.csv  raw_enrollments_202503.csv
9-adjacent-key-3rd-party-enrichment/: README.md
(+2116 files in other folders)
