[project]
name = "8-data-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster==1.10.3",
    "dagster-webserver==1.10.3",
    "pandas>=2.2.3",
]

[tool.dagster]
module_name = "dagster_transformer.definitions"
code_location_name = "interview"
